--- a/JS21/index.html
+++ b/JS21/index.html
@@ -84,7 +84,7 @@
             color: #fff;
         }
     </style>
-    <script defer src="js/main.js"></script>
+    <script defer src="../JS21/main.js"></script>
   </head>
   <body>
     <nav>
