--- a/JS22/index.html
+++ b/JS22/index.html
@@ -29,7 +29,7 @@
       </section>
       <section id="view2" class="view2 darkblue">
         <div class="black">
-          <h2>My 2nd View</h2>
+          <h2>Jackpot!</h2>
         </div>
       </section>
       <section id="view3" class="view3">
