--- a/JS24/index.html
+++ b/JS24/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chapter 24 - </title>
-    <script src="../JS24/js/main.js"></script>
+    <script type ="module" src="../JS24/js/main.js"></script>
+   
 </head>
 <body>
     <main><h1>Chapter 24 - Modules</h1></main>
