--- a/JS25/index.html
+++ b/JS25/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chapter 25 - High Order functions</title>
-    <script src="../JS25/main.js"></script>
+    <script type="module" src="../JS25/main.js"></script>
 </head>
 <body>
     <main><h1>Chapter 25 - High Order functions</h1></main>
