--- a/DOM PROJECT/index.html
+++ b/DOM PROJECT/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1 id ="main-heading"> Favourite movie</h1>
         <ul>
-            <li class="list-items" style="text-decoration: none;">The Matrix</li>
+            <li class="list-items">The Matrix</li>
             <li class="list-items">Star Wars</li>
             <li class="list-items">Harry Potter</li>
             <li class="list-items">Lord of the Rings</li>
