--- a/DOM PROJECT/index.html
+++ b/DOM PROJECT/index.html
@@ -18,7 +18,23 @@
             <li class="list-items">Marvel</li>
         </ul>
     </div>
+    
+    <div class="erickelnino">
+        <div class="card">
+            <h2>Example 1</h2>
+            <button type="button" class="btn-1">Enter</button>
+        </div>
 
+        <div class="card">
+            <h2>Example 2</h2>
+            <button type="button" class="btn-2">Enter</button>
+        </div>
+
+        <div class="card">
+            <h2>Example 2</h2>
+            <button type="button" class="btn-3">Enter</button>
+        </div>
+    </div>
     <script src="../DOM PROJECT/main.js"></script>
 </body>
 </html>
