--- a/DOM PROJECT/index.html
+++ b/DOM PROJECT/index.html
@@ -20,17 +20,17 @@
     </div>
     
     <div class="erickelnino">
-        <div class="card">
+        <div class="card box-1">
             <h2>Example 1</h2>
             <button type="button" class="btn-1">Enter</button>
         </div>
 
-        <div class="card">
+        <div class="card box-2">
             <h2>Example 2</h2>
             <button type="button" class="btn-2">Enter</button>
         </div>
 
-        <div class="card">
+        <div class="card box-3">
             <h2>Example 2</h2>
             <button type="button" class="btn-3">Enter</button>
         </div>
