--- a/DOM PROJECT/Joy /index.html
+++ b/DOM PROJECT/Joy /index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <main><h1>Async Await</h1></main>
-    <script src="../Joy /main.js"></script>
+    <!-- <script src="../Joy /main.js"></script> -->
+    <script src="../Joy /async.js"></script>
 </body>
 </html>
